Doc: 린트 스테이지 설정 추가

--- a/package.json
+++ b/package.json
@@ -50,5 +50,11 @@
     "extends": [
       "plugin:storybook/recommended"
     ]
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx}": [
+      "eslint --ext .tsx --ext .ts src/",
+      "prettier --write"
+    ]
   }
 }
