--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@storybook/test": "^8.2.9",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^8.10.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^9.10.0",
     "eslint-config-prettier": "^9.1.0",
@@ -53,7 +54,7 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx}": [
-      "eslint --ext .tsx --ext .ts src/",
+      "eslint --fix/",
       "prettier --write"
     ]
   }
