Fix: 모노레포 오류 수정

--- a/package.json
+++ b/package.json
@@ -46,5 +46,9 @@
       "eslint --ext .tsx --ext .ts src/",
       "prettier --write"
     ]
-  }
+  },
+  "workspaces": [
+    "packages/*",
+    "apps/"
+  ]
 }
