Feat: path alias, tsconfigPath 추가 및 경로 변경(상대경로 -> 절대경로)

--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "devDependencies": {
     "@storybook/addon-essentials": "^8.2.9",
     "@storybook/addon-interactions": "^8.2.9",
