--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "prettier": "^3.3.3",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.5.0",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vite-tsconfig-paths": "^5.0.1"
   },
   "eslintConfig": {
     "extends": [
@@ -47,9 +48,5 @@
       "eslint --fix/",
       "prettier --write"
     ]
-  },
-  "workspaces": [
-    "packages/*",
-    "apps/"
-  ]
+  }
 }
