--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -6,6 +6,9 @@
     "module": "ESNext",
     "skipLibCheck": true,
     "baseUrl": ".",
+    "paths": {
+      "@ui/*": ["packages/ui/src/*"]
+    },
 
     /* Bundler mode */
     "moduleResolution": "bundler",
