--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     ]
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx}": [
+    "**/*.{js,ts,tsx}": [
       "eslint --fix/",
       "prettier --write"
     ]
