--- a/apps/hongcha/tsconfig.json
+++ b/apps/hongcha/tsconfig.json
@@ -1,19 +1,15 @@
 {
   "extends": "../../tsconfig.base.json",
+  "include": ["**/*.ts", "**/*.tsx", "types/axios.d.ts"],
   "compilerOptions": {
     "baseUrl": ".",
-    "paths": {
-      "@/*": [
-        "./src/*"
-      ]
-    },
+    // "paths": {
+    //   "@/*": ["./src/*"]
+    // },
     "allowJs": true,
     "incremental": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "jsx": "preserve"
-  },
-  "include": [
-    "pages"
-  ]
+  }
 }
