--- a/apps/hongcha/package.json
+++ b/apps/hongcha/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@tanstack/react-query": "^5.59.16",
     "axios": "^1.7.7",
     "next": "^15.0.1"
   },
